# MCvD_Simulator-Dev_Build

./: CITATION.cff  CONTRIBUTING.md  Makefile  README.md  README_SETUP.md  _tmp_edit.py  environment.yml  pyproject.toml  requirements-dev.in  requirements.in  requirements.latest.txt  setup_env.py  setup_project.py  tmp_patch.diff
.github/: copilot-instructions.md
analysis/: capacity_analysis.py  diagnose_csk.py  fig_onsi_vs_rho_cc.py  generate_comparative_plots.py  generate_supplementary_figures.py  ieee_plot_style.py  isi_analytic_model.py  lod_calc.py  lod_ceiling_scan.py  log_utils.py  maintenance_suite.py  noise_correlation.py  organoid_sensitivity.py  param_table.py  plot_channel_profiles.py  plot_csk_single_dual.py  plot_device_fom.py  plot_generate.py  plot_guard_frontier.py  plot_hybrid_multidim_benchmarks.py  plot_input_output_gain.py  plot_isi_tradeoff.py  plot_snr_panels.py  rebuild_binding_figs.py  rebuild_oect_figs.py  rebuild_pipeline_figs.py  rebuild_transport_figs.py  run_all_analyses.py  run_final_analysis.py  run_master.py  run_noise_only.py  run_ser_sweeps.py  sensitivity_study.py  sweep_snr_vs_ts.py  table_maker.py  test_dynamic_window.py  ui_progress.py  validate_analytics.py  validate_transport_against_fick.py
config/: default.yaml
docs/: CLI_MANUAL.md
notebooks/: binding_plots.ipynb  oect_plots.ipynb  pipeline_plots.ipynb  propagation_plots.ipynb
results/data/: csk_litmus_logs.txt  data_rate_results.csv  dist_sweep_results.csv  dist_sweep_results.json  dist_sweep_results_rigorous.csv  dist_sweep_results_test.csv  lod_distance_results.csv  lod_vs_distance_csk.csv  lod_vs_distance_csk_uniform.csv  lod_vs_distance_mosk.csv  nm_sweep_results.csv  nm_sweep_results.json  nm_sweep_results_rigorous.csv  nm_sweep_results_test.csv  propagation_analysis_results.json  ser_vs_nm_csk.csv  ser_vs_nm_csk_uniform.csv  ser_vs_nm_mosk.csv
results/tables/: table1.tex  table_ii_performance.csv  table_ii_performance.tex  table_ii_raw.csv
src/: __init__.py  analysis_utils.py  binding.py  config_utils.py  constants.py  detection.py  diffusion.py  oect.py  pipeline.py
src/mc_channel/: isi_analytic.py  transport.py
src/mc_detection/: __init__.py  algorithms.py
src/mc_receiver/: binding.py  oect.py
tests/: conftest.py  test_binding.py  test_binding_poisson.py  test_delay.py  test_detection.py  test_diffusion.py  test_dynamic_window.py  test_merge_ablation_cli.py  test_noise_correlation.py  test_oect.py  test_oect_gain.py  test_oect_impulse.py  test_oect_noise.py  test_pipeline.py  test_pipeline_core.py  test_psd_corr.py  test_psd_floor.py  test_unit_conversion.py
utils/: rebuild_matlab_plots.m
