[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tri-channel-oect-mc"
version = "0.3.0"
description = "Tri-channel OECT molecular communication simulator (MoSK/CSK/Hybrid) with crash-safe resume, parallel execution, real-time logging, IEEE-quality plotting, and benchmarking"
readme = "README.md"
requires-python = ">=3.11"  # SciPy>=1.16 requires Python >=3.11
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

# Keep these unpinned to install latest by default; use requirements.latest.txt for a frozen set
dependencies = [
  "numpy>=2.3",
  "scipy>=1.16",
  "pandas>=2.3",
  "matplotlib>=3.10",
  "seaborn>=0.13",
  "PyYAML>=6.0.2",
  "tqdm>=4.67",
  "rich>=14.1",
  "psutil>=7.0",
  "cycler>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "black>=24.8",
  "ruff>=0.6",
  "mypy>=1.11",
  "pip-tools>=7.4",
  "jupyter>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcvd-simulate = "analysis.run_final_analysis:main"
mcvd-master = "analysis.run_master:main"