[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tri-channel-oect-mc"
version = "0.3.0"
description = "Tri-channel OECT molecular communication simulator (MoSK/CSK/Hybrid) with crash-safe resume, parallel execution, real-time logging, IEEE-quality plotting, and benchmarking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "numpy>=2.3.3",
  "scipy>=1.16.2",
  "pandas>=2.3.3",
  "matplotlib>=3.10.7",
  "seaborn>=0.13.2",
  "PyYAML>=6.0.3",
  "tqdm>=4.67.1",
  "rich>=14.2.0",
  "psutil>=7.1.0",
  "joblib>=1.5.2",
  "statsmodels>=0.14.5",
  "cycler>=0.12.1",
]

[project.optional-dependencies]
analysis = [
  "pyarrow>=21.0.0",
]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "black>=25.9.0",
  "ruff>=0.14.0",
  "mypy>=1.18.2",
  "pip-tools>=7.5.1",
  "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcvd-simulate = "analysis.run_final_analysis:main"
mcvd-master = "analysis.run_master:main"
